# battleship-game-public

./: README.md  battleship-development-process.md  battleship-game-files-list.txt
battleship-game/: BUG_FIXES_REPORT.md  README.md
battleship-game/battleship-backend/: README.md  pyproject.toml
battleship-game/battleship-backend/app/: main.py
battleship-game/battleship-frontend/: .env  README.md  package-lock.json  package.json
battleship-game/battleship-frontend/src/: App.tsx
