[tool.poetry]
name = "app"
version = "0.1.0"
description = "Battleship game backend API"
repository = "https://github.com/davemojo/-battleship-game"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
psycopg = {extras = ["binary"], version = "^3.2.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
